<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapseToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:titleEnabled="false"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:layout_collapseMode="parallax"
                    android:scaleType="fitXY"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_bg"/>

            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/product_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_quantity"
                    android:textColor="@color/colorPrimaryDark"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/due_date"
                    android:textColor="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:padding="5dp"/>

             <TextView
               android:id="@+id/name"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="8dp"
               android:textSize="16dp"
               fontPath="fonts/Nexa-Bold.ttf"
               android:textStyle="normal|bold"
               android:padding="5dp"/>

             <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/description"
               android:padding="5dp"/>

             <TextView
               android:id="@+id/description"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="8dp"
               android:textSize="16dp"
               fontPath="fonts/Nexa-Bold.ttf"
               android:textStyle="normal|bold"
               android:padding="5dp"/>

           <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/barcode"
              android:padding="5dp"/>

            <TextView
              android:id="@+id/barcode"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="8dp"
              android:textSize="16dp"
              fontPath="fonts/Nexa-Bold.ttf"
              android:textStyle="normal|bold"
              android:padding="5dp"/>

            </LinearLayout>

        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        app:fabSize="auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:backgroundTint="@color/colorPrimaryDark"
        android:src="@drawable/check"
        app:layout_anchor="@id/appbarlayout"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>
